--- a/clover.html
+++ b/clover.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>2x2 Grid Example</title>
-  <style>
+  <title>2x2 Grid Example</title>  
+  <style>    
+    .wordlist-pressed { /* 11/9/23 was going to use .wordlist-selector-button:focus but that only 'presses' one button */
+      background-color: green;
+      outline: 1px solid black;
+      color: white;
+    }
+    .wordlist-selector-button {
+      position: relative;
+      left: 20px;
+      width: 100px;
+      height: 40px;
+      cursor: pointer;
+    }
     .return-button {
       z-index: 10;
       position: absolute;
       bottom: 3px;
       left: 6px;
       background-color: palevioletred;
-      display: block;
+      display: none; /* this never shows but has same functions as new game */
     }
     .proceed-button {
       z-index: 10;
       position: absolute;
       bottom: 3px;
       right: 6px;      
-      background-color: palegreen;
+     /* background-color: palegreen;  */
       display: block;
     }
     .rotate-board-button {
@@ -83,6 +95,7 @@
       text-align: center; /* Center the text horizontally */
     }
     .input-field-rotated-clockwise {
+      touch-action: manipulation;   /* 11/9/23 see -anticlockwise input field DOES NOT WORK??? */
       width: 100%;  /* IT ONLY GOES UP TO 100% IT SEEMS... */
       width: 320px; /* 12/8/23 */
       height: 25%; /* 12/8/23 */
@@ -98,6 +111,7 @@
       /* writing-mode: vertical-rl;  Set the text to be vertical, right to left */
     }
     .input-field-rotated-anticlockwise {
+      touch-action: manipulation;   /* 11/9/23 added this line to prevent zoom on left (also, see right) input fields. DOES NOT WORK??? */
       width: 100%;  /* IT ONLY GOES UP TO 100% IT SEEMS... */
       width: 320px; /* 12/8/23 */
       height: 25%; /* 12/8/23 */
@@ -154,6 +168,7 @@
     }
 
     .grid-item {
+      z-index: 1;   /* 5/9/23 */
       position: relative;
       width: 136px;
       height: 136px;
@@ -172,8 +187,8 @@
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
       gap: 1px;
-      width: 320px;
-      height: 320px;
+      min-width: 320px;     /* 11/9/23 I added min- instead of just width/height to avoid reducing size of this element when computer browser is minimised. */
+      min-height: 320px;
       border: 1px solid black;
       background-color: lightgray;
      /* float: left; */
@@ -201,8 +216,8 @@
     }
 
     .rectangle-rotated {
-      width: 300px;
-      height: 80px;
+      min-width: 300px;   /* 11/9/23 see grid-container comment */
+      min-height: 80px;
       background-color: lightgreen;
     /*  margin-top: 10px; */
       margin-left: 10px; /* BEFORE 12/8/23 WAS 100px */
@@ -225,8 +240,8 @@
     }
 
     .rectangle-top {
-      width: 300px;
-      height: 80px;
+      min-width: 300px;   /* 11/9/23 see grid-container comment */
+      min-height: 80px;
       background-color: lightgreen;
       margin-right: 10px;
       margin-left: 10px; /* BEFORE 12/8/23 IT WAS 100px */
@@ -283,8 +298,8 @@
 
   /* Styles for the button when it's pressed */
   .pressed {
-    background-color: lemonchiffon; /* BEFORE 12/8/23 WAS lightblue */
-    color: red;
+    background-color: lemonchiffon !important; /* BEFORE 12/8/23 WAS lightblue and not important */
+  /*  color: red; 5/9/23 REMOVED, so that color goes red when its a wrong card (guessMap) */
   }
 
   .word {
@@ -320,13 +335,13 @@
   <div class="container">
   <div><button class="rotate-board-button" id="boardAnticlockwiseButton"></button></div>
   <div class="rectangle-top" id="rectangleTop"> <!--17/8/23 added id for all rectangles, so can getElementbyId for each, and clueCards = [array of rectangle elements]-->
-    <input type="text" class="input-field user-clue" id="inputFieldTop" disabled> <!--17/8/23 removed placeholder="Write clue etc"-->
+    <input type="text" class="input-field user-clue" id="inputFieldTop" disabled tabindex="1"> <!--17/8/23 removed placeholder="Write clue etc" 11/9/23 added tabindex (order of keyboard tab for clue input) -->
   </div>
   <div><button class="rotate-board-button" id="boardClockwiseButton"></button></div>
   </div>
   <div class="container">
     <div class="rectangle-left" id="rectangleLeft">
-      <input type="text" class="input-field-rotated-anticlockwise user-clue" id="inputFieldLeft" disabled>
+      <input type="text" class="input-field-rotated-anticlockwise user-clue" id="inputFieldLeft" disabled tabindex="4">
     </div>
     <div id="grid" class="grid-container">
       <button id="card1" class="grid-item unpressed cardslot" onclick="toggleButton('card1')" disabled></button>
@@ -335,19 +350,18 @@
       <button id="card4" class="grid-item unpressed cardslot" onclick="toggleButton('card4')" disabled></button>
     </div>
     <div class="rectangle" id="rectangle">
-      <input type="text" class="input-field-rotated-clockwise user-clue" id="inputFieldRight" disabled>
+      <input type="text" class="input-field-rotated-clockwise user-clue" id="inputFieldRight" disabled tabindex="2">
     </div>
     <!-- 12/8/23 THIS IS TEST FOR INPUT TEXT ON VERTICAL RECTANGLES, STILL NOT RIGHT, WORDS NOT 22 LETTERS
     <div class="rectangle-left2">
       <input type="text" class="vertical-input" placeholder="Enter text vertically">
     </div>  -->
     <div class="column-container"> 
-      <div class="summary-box" id="summaryBox">Welcome to <b>So Clover!</b><p>This cooperative game requires at least two players.
-        <br>You, the clue-giver (henceforth <b>Player One</b>) and the guessers (henceforth Players Two).
-        <p> It is your turn, <b>Player One</b>.
-        <br>Ensure that Players Two is unable to see your screen before proceeding."
+      <div class="summary-box" id="summaryBox">Welcome to <b>So Clover!</b><p>This co-operative word-association game requires at least two players.
+        <p>Choose a <b>Clue-giver</b>. The other players form the <i>team</i>, who will attempt to guess the exact solution using your clues.
+        <p><b>Clue-giver</b>, ensure that your team is unable to see your screen before proceeding.
         <div class="container">
-         <button class="proceed-button" id="proceedButton">Proceed</button>
+          <button class="proceed-button" id="proceedButton" disabled>Proceed</button>
           <button class="return-button" id="returnButton">Return to board</button>
         </div>
       </div>
@@ -358,9 +372,15 @@
   <div class="container">
     <div><button class="rotate-card-button" id="cardAnticlockwiseButton"></button></div>
   <div class="rectangle-rotated" id="rectangleRotated">
-    <input type="text" class="input-field user-clue" id="inputFieldBottom" disabled>
+    <input type="text" class="input-field user-clue" id="inputFieldBottom" disabled tabindex="3">
   </div>
   <div><button class="rotate-card-button" id="cardClockwiseButton"></button></div>
+  <div class="container">
+    <div><button class="wordlist-selector-button" id="soCloverWords">So Clover!<br>words</button></div>
+    <div><button class="wordlist-selector-button" id="codenamesWords">Codenames<br>words</be></button></div>
+    <div><button class="wordlist-selector-button" id="duetWords">Duet<br>words</button></div>
+    <div><button class="wordlist-selector-button" id="undercoverWords">Undercover<br>(explicit)</button></div>
+  </div>
   </div>
   <div class="container">
     <!-- Updated slots with card containers -->
@@ -387,9 +407,9 @@
   </div>
 <!--  <div><button id="startGameButton">Player One: Start</button></div> -->
   <div><button id="submitCluesButton" style="display: none">Submit Clues</button></div>
-  <div><button id="submitGuessButton" style="display: none">Submit guess</button></div>
-  <div><button id="newGameButton" style="display: none">New game</button></div>
-  <div><button id="seeOriginalCardsButton" style="display: none">see original cards</button></div>
+  <div><button id="submitGuessButton" style="display: none">Submit Guess</button></div>
+  <div><button id="newGameButton" style="display: none">Next Round</button></div>
+  <div><button id="seeOriginalCardsButton" style="display: none">View Soluton</button></div>
   <div class="text-box" id="textBox">
     
   </div>
